<resources>

    <!-- Resources that do not require translation -->
    <string name="app_name" translatable="false">Temere</string>
    <string name="navigation_drawer_header_title" translatable="false">TEMERE</string>

    <!-- Translatable resources -->
    <string name="filter" translation_description="Common Filter">Filter</string>
    <string name="grid" translation_description="Common Filter">Switch between grid and list</string>
    <string name="categories_title">Browse Categories</string>
    <string name="legothemes_title">Browse Themes</string>
    <string name="restaurants_title">Nearby Restaurants</string>
    <string name="legosets_title">Browse All Sets</string>
    <string name="restaurant_details_title">Restaurant Details</string>
    <string name="legoset_details_title">Set details</string>
    <string name="navigation_drawer_header_content_description">Navigation drawer header logo</string>
    <string name="santa_claus_quote">Santa Claus will consider this request</string>
    <string name="menu_item_share" translation_description="The label for the Share menu item">Share</string>
    <string name="number_of_parts">Number of parts: %d</string>
    <string name="year">Year: %d</string>
    <string name="share_restaurant">Check out %s Restaurant : %s</string>
    <string name="share_lego_set">Check out %s Lego set : %s</string>
    <string name="random">Random Pick</string>

    <!-- Accessibility -->
    <string name="a11y_legoset_item_image">Picture of Lego Set</string>
    <string name="a11y_restaurant_item_image">Picture of Restaurant</string>

</resources>
