<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/category_fragment">

    <fragment
        android:id="@+id/category_fragment"
        android:name="id.ac.ui.cs.mobileprogramming.adrianhartanto.temere.category.ui.CategoryFragment"
        android:label="@string/categories_title"
        tools:layout="@layout/fragment_themes">

        <action
            android:id="@+id/action_theme_fragment_to_location_fragment"
            app:destination="@id/location_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/legothemes_fragment"
        android:name="id.ac.ui.cs.mobileprogramming.adrianhartanto.temere.legotheme.ui.LegoThemeFragment"
        android:label="@string/legothemes_title"
        tools:layout="@layout/fragment_themes">

        <action
            android:id="@+id/action_theme_fragment_to_sets_fragment"
            app:destination="@id/legosets_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/location_fragment"
        android:name="id.ac.ui.cs.mobileprogramming.adrianhartanto.temere.location.ui.LocationFragment"
        android:label="@string/categories_title"
        tools:layout="@layout/fragment_themes">

        <argument
            android:name="categoryId"
            app:argType="integer"
            android:defaultValue="-1"/>

        <action
            android:id="@+id/action_theme_fragment_to_restaurants_fragment"
            app:destination="@id/restaurants_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_to_category_fragment"
            app:destination="@id/category_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/restaurants_fragment"
        android:name="id.ac.ui.cs.mobileprogramming.adrianhartanto.temere.restaurant.ui.RestaurantsFragment"
        android:label="@string/restaurants_title"
        tools:layout="@layout/fragment_legosets">

        <argument
            android:name="latitude"
            app:argType="float"
            android:defaultValue="0.0"/>

        <argument
            android:name="longitude"
            app:argType="float"
            android:defaultValue="0.0"/>

        <argument
            android:name="categoryId"
            app:argType="integer"
            android:defaultValue="-1"/>

        <argument
            android:name="categoryName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>

        <action
            android:id="@+id/action_to_restaurant_detail_fragment"
            app:destination="@id/restaurant_detail_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_to_category_fragment"
            app:destination="@id/category_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_restaurants_fragment_to_category_fragment"
            app:destination="@id/category_fragment"
            app:popUpTo="@+id/category_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/legosets_fragment"
        android:name="id.ac.ui.cs.mobileprogramming.adrianhartanto.temere.legoset.ui.LegoSetsFragment"
        android:label="@string/legosets_title"
        tools:layout="@layout/fragment_legosets">

        <argument
            android:name="themeId"
            app:argType="integer"
            android:defaultValue="-1"/>

        <argument
            android:name="themeName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>

        <action
            android:id="@+id/action_to_legoset_detail_fragment"
            app:destination="@id/legoset_detail_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/restaurant_detail_fragment"
        android:name="id.ac.ui.cs.mobileprogramming.adrianhartanto.temere.restaurant.ui.RestaurantFragment"
        android:label="@string/restaurant_details_title"
        tools:layout="@layout/fragment_restaurant">

        <argument
            android:name="id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/legoset_detail_fragment"
        android:name="id.ac.ui.cs.mobileprogramming.adrianhartanto.temere.legoset.ui.LegoSetFragment"
        android:label="@string/legoset_details_title"
        tools:layout="@layout/fragment_lego_set">

        <argument
            android:name="id"
            app:argType="string" />
    </fragment>

</navigation>